# Engine

./: .gitignore  AutoFramework.py  CMakeLists.txt  README.md
Base/: CMakeLists.txt
Base/include/Engine/: Asset.hpp  AssetBuildThread.hpp  AssetManager.hpp  IAssetBuilder.hpp  IAssetProvider.hpp  SimpleAsset.hpp
Base/include/Engine/BPX/: Manager.hpp
Base/include/Engine/Driver/: BlendStateDescriptor.hpp  BufferDescriptor.hpp  Event.hpp  IDisplay.hpp  IRenderContext.hpp  IRenderEngine.hpp  IResourceAllocator.hpp  IShader.hpp  IShaderCompiler.hpp  PipelineDescriptor.hpp  RenderTargetDescriptor.hpp  Resource.hpp  SamplerDescriptor.hpp  ShaderProgramDescriptor.hpp  TextureDescriptor.hpp  VertexFormatDescriptor.hpp
Base/include/Engine/Input/: EKey.hpp
Base/include/Engine/Render/: IRenderEngine.hpp  IResourceAllocator.hpp
Base/src/Engine/: AssetBuildThread.cpp  AssetManager.cpp
Base/src/Engine/BPX/: Manager.cpp
CMakes/: Engine.cmake  Program.cmake  ThirdParty.cmake
RenderEngine.DX11/: CMakeLists.txt
RenderEngine.DX11/include/: DX11Display.hpp  DX11RenderContext.hpp  DX11RenderEngine.hpp  DX11ResourceAllocator.hpp  DX11Resources.hpp  DX11ShaderCompiler.hpp
RenderEngine.DX11/src/: DX11Display.cpp  DX11RenderContext.cpp  DX11RenderEngine.cpp  DX11ResourceAllocator.cpp  DX11ShaderCompiler.cpp
RenderEngine.GL40/: CMakeLists.txt
RenderEngine.GL40/include/: GL40RenderContext.hpp  GL40ResourceAllocator.hpp  GL40Resources.hpp  GL40ShaderCompiler.hpp  ShaderDecoder.hpp  glad.h
RenderEngine.GL40/src/: GL40RenderContext.cpp  GL40ResourceAllocator.cpp  GL40ShaderCompiler.cpp  ShaderDecoder.cpp  glad.c
Tests/: CMakeLists.txt
Tests.DX11/: CMakeLists.txt  test.pixel.hlsl  test.vertex.hlsl
Tests.DX11/src/: LowLevelMain.cpp  main.cpp
Tests/include/: ListLogHandler.hpp
Tests/src/: AssetManager.cpp  BPX.cpp  ListLogHandler.cpp  main.cpp
